🔨 :hammer: [Fix] Too large signup comps on desktop

--- a/src/pages/Signup/Signup.module.css
+++ b/src/pages/Signup/Signup.module.css
@@ -11,6 +11,11 @@
     width: 70%;
     height: 70%;
     display: flex;
+    justify-content: space-between;
+}
+
+.signupLeft {
+    margin-right: 20px;
 }
 
 .signupLeft, .signupRight {
@@ -18,6 +23,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 500px;
 }
 
 .signupLogo {
